# portal-planificacion-act3

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
.github/workflows/: ci.yml
.nxt-ai/: MEMORY.md  constitution.md
.nxt-ai/steering/: product.md  tech-stack.md
_handoff/: HANDOFF.md  check_status.sh  run_after_build.sh  upload_to_storage.sh
apps/backend/: Dockerfile  Dockerfile.prod  README.md  pyproject.toml
apps/backend/src/portal_act3/: __init__.py  config.py  main.py
apps/backend/src/portal_act3/adapters/: plan_run_store.py  singularity_runner.py  supabase_client.py  supabase_repo.py
apps/backend/src/portal_act3/api/: captures.py  entregable.py  pddl_files.py  plan_runs.py  plans.py  scenarios.py
apps/backend/src/portal_act3/domain/: models.py  pddl_validator.py  plan_simulator.py
apps/backend/src/portal_act3/tasks/: celery_app.py  run_planner.py
apps/backend/tests/: conftest.py  test_api_endpoints.py  test_pddl_validator.py  test_plan_run_store.py  test_plan_simulator.py  test_real_pddl_files.py
apps/frontend/: Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json  tsconfig.json
docs/: 00-getting-started.md  01-pddl-modeling-decisions.md  GLOSSARY.md  TROUBLESHOOTING.md
entregables/capturas/: README.md
tools/: README.md  _check_snake_log.sh  _make_capturas.sh  _make_snake_figs.sh  _render_all.sh  _rerun_snake.sh  build_entregable_zip.py  build_pdf.sh  check_setup.sh  compare_plans.py  render_terminal_png.py  run_all_planners.sh  run_real_planner.sh
(+68 files in other folders)
