[project]
name = "portal-act3-backend"
version = "0.1.0"
description = "Backend del portal de la Actividad 3 — FastAPI + Celery + Redis + Supabase"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "celery[redis]>=5.4",
    "redis>=5.2",
    "python-multipart>=0.0.12",
    "httpx>=0.27",
    "supabase>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "httpx>=0.27",
]
all = [
    "portal-act3-backend[dev]",
]

[project.scripts]
portal-act3 = "portal_act3.main:run"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/portal_act3"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q --strict-markers"
